[package]
name = "postgres"
version = "0.19.7"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A native, synchronous PostgreSQL client"
repository = "https://github.com/sfackler/rust-postgres"
readme = "../README.md"
keywords = ["database", "postgres", "postgresql", "sql"]
categories = ["database"]

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "sfackler/rust-postgres" }

[features]
array-impls = ["tokio-postgres-sm3/array-impls"]
with-bit-vec-0_6 = ["tokio-postgres-sm3/with-bit-vec-0_6"]
with-chrono-0_4 = ["tokio-postgres-sm3/with-chrono-0_4"]
with-eui48-0_4 = ["tokio-postgres-sm3/with-eui48-0_4"]
with-eui48-1 = ["tokio-postgres-sm3/with-eui48-1"]
with-geo-types-0_6 = ["tokio-postgres-sm3/with-geo-types-0_6"]
with-geo-types-0_7 = ["tokio-postgres-sm3/with-geo-types-0_7"]
with-serde_json-1 = ["tokio-postgres-sm3/with-serde_json-1"]
with-smol_str-01 = ["tokio-postgres-sm3/with-smol_str-01"]
with-uuid-0_8 = ["tokio-postgres-sm3/with-uuid-0_8"]
with-uuid-1 = ["tokio-postgres-sm3/with-uuid-1"]
with-time-0_2 = ["tokio-postgres-sm3/with-time-0_2"]
with-time-0_3 = ["tokio-postgres-sm3/with-time-0_3"]

[dependencies]
bytes = "1.0"
fallible-iterator = "0.2"
futures-util = { version = "0.3.14", features = ["sink"] }
log = "0.4"
tokio-postgres-sm3 = { version = "0.7.10", path = "../tokio-postgres" }
tokio = { version = "1.0", features = ["rt", "time"] }

[dev-dependencies]
criterion = "0.5"
